src/global/global.css
/* ... */
/* colors for blue-light theme */
[data-theme='blue-light'] {
  --accent-dark-overlay-base: 7, 10, 22;
--accent-dark-overlay: rgba(var(--accent-dark-overlay-base), 0.48);
--accent-dark-base: 36, 81, 136;
--accent-dark: rgba(var(--accent-dark-base), 1);
--accent-click-base: 61, 125, 203;
--accent-click: rgba(var(--accent-click-base), 1);
--accent-main-base: 48, 108, 180;
--accent-main: rgba(var(--accent-main-base), 1);
--accent-400-base: 42, 95, 159;
--accent-400: rgba(var(--accent-400-base), 1);
--accent-350-base: 117, 162, 218;
--accent-350: rgba(var(--accent-350-base), 1);
--accent-300-base: 144, 181, 226;
--accent-300: rgba(var(--accent-300-base), 1);
--accent-200-base: 200, 218, 240;
--accent-200: rgba(var(--accent-200-base), 1);
--accent-150-base: 210, 228, 248;
--accent-150: rgba(var(--accent-150-base), 1);
--accent-100-base: 245, 249, 254;
  --accent-100: rgba(var(--accent-100-base), 1);
  --black-base: 34, 34, 34;
  --black: rgba(var(--black-base), 1);
  --white-base: 254, 254, 254;
  --white: rgba(var(--white-base), 1);
  --grey-400-base: 80, 80, 80;
  --grey-400: rgba(var(--grey-400-base), 1);
  --grey-350-base: 117, 117, 117;
  --grey-350: rgba(var(--grey-350-base), 1);
  --grey-300-base: 170, 170, 170;
  --grey-300: rgba(var(--grey-300-base), 1);
  --grey-200-base: 218, 218, 218;
  --grey-200: rgba(var(--grey-200-base), 1);
  --grey-150-base: 240, 240, 240;
  --grey-150: rgba(var(--grey-150-base), 1);
  --grey-100-base: 245, 245, 245;
  --grey-100: rgba(var(--grey-100-base), 1);
  --red-main-base: 202, 38, 38;
  --red-main: rgba(var(--red-main-base), 1);
  --red-dark-base: 178, 24, 24;
  --red-dark: rgba(var(--red-dark-base), 1);
  --red-secondary-base: 231, 55, 55;
  --red-secondary: rgba(var(--red-secondary-base), 0.1);
  --orange-dark-base: 197, 114, 14;
  --orange-dark: rgba(var(--orange-dark-base), 1);
  --orange-main-base: 221, 140, 44;
  --orange-main: rgba(var(--orange-main-base), 1);
  --orange-secondary-base: 253, 245, 237;
  --orange-secondary: rgba(var(--orange-secondary-base), 1);
  --green-main-base: 62, 147, 33;
  --green-main: rgba(var(--green-main-base), 1);
  --green-secondary-base: 238, 246, 235;
  --green-secondary: rgba(var(--green-secondary-base), 1);
  --always-white-base: 254, 254, 254;
  --always-white: rgba(var(--always-white-base), 1);
  --white-semi-s-base: 255, 255, 255;
  --white-semi-s: rgba(var(--white-semi-s-base), 0.16);
  --white-semi-m-base: 255, 255, 255;
  --white-semi-m: rgba(var(--white-semi-m-base), 0.32);
  --white-semi-l-base: 255, 255, 255;
  --white-semi-l: rgba(var(--white-semi-l-base), 0.4);
}

/* colors for blue-dark theme */
[data-theme='blue-dark'] {
  --accent-dark-overlay-base: 63, 65, 70;
  --accent-dark-overlay: rgba(var(--accent-dark-overlay-base), 0.92);
  --accent-dark-base: 61, 107, 173;
  --accent-dark: rgba(var(--accent-dark-base), 1);
  --accent-click-base: 32, 58, 103;
  --accent-click: rgba(var(--accent-click-base), 1);
  --accent-main-base: 44, 78, 138;
  --accent-main: rgba(var(--accent-main-base), 1);
  --accent-400-base: 157, 165, 190;
  --accent-400: rgba(var(--accent-400-base), 1);
  --accent-350-base: 133, 140, 159;
  --accent-350: rgba(var(--accent-350-base), 1);
  --accent-300-base: 83, 92, 115;
  --accent-300: rgba(var(--accent-300-base), 1);
  --accent-200-base: 61, 64, 73;
  --accent-200: rgba(var(--accent-200-base), 1);
  --accent-150-base: 42, 45, 53;
  --accent-150: rgba(var(--accent-150-base), 1);
  --accent-100-base: 21, 21, 25;
  --accent-100: rgba(var(--accent-100-base), 1);
  --black-base: 244, 244, 244;
  --black: rgba(var(--black-base), 1);
  --white-base: 34, 34, 34;
  --white: rgba(var(--white-base), 1);
  --grey-400-base: 200, 200, 200;
  --grey-400: rgba(var(--grey-400-base), 1);
  --grey-350-base: 129, 126, 126;
  --grey-350: rgba(var(--grey-350-base), 1);
  --grey-300-base: 170, 170, 170;
  --grey-300: rgba(var(--grey-300-base), 1);
  --grey-200-base: 68, 68, 68;
  --grey-200: rgba(var(--grey-200-base), 1);
  --grey-150-base: 23, 23, 24;
  --grey-150: rgba(var(--grey-150-base), 1);
  --grey-100-base: 44, 44, 44;
  --grey-100: rgba(var(--grey-100-base), 1);
  --red-main-base: 183, 59, 59;
  --red-main: rgba(var(--red-main-base), 1);
  --red-dark-base: 227, 90, 90;
  --red-dark: rgba(var(--red-dark-base), 1);
  --red-secondary-base: 250, 109, 109;
  --red-secondary: rgba(var(--red-secondary-base), 0.1);
  --orange-dark-base: 197, 114, 14;
  --orange-dark: rgba(var(--orange-dark-base), 1);
  --orange-main-base: 221, 140, 44;
  --orange-main: rgba(var(--orange-main-base), 1);
  --orange-secondary-base: 54, 46, 36;
  --orange-secondary: rgba(var(--orange-secondary-base), 1);
  --green-main-base: 58, 136, 32;
  --green-main: rgba(var(--green-main-base), 1);
  --green-secondary-base: 40, 51, 36;
  --green-secondary: rgba(var(--green-secondary-base), 1);
  --always-white-base: 254, 254, 254;
  --always-white: rgba(var(--always-white-base), 1);
  --white-semi-s-base: 255, 255, 255;
  --white-semi-s: rgba(var(--white-semi-s-base), 0.16);
  --white-semi-m-base: 255, 255, 255;
  --white-semi-m: rgba(var(--white-semi-m-base), 0.32);
  --white-semi-l-base: 255, 255, 255;
  --white-semi-l: rgba(var(--white-semi-l-base), 0.4);
}
/* ... */

